--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     ext.kotlin_version = '1.6.10'
 
     implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
